# buildpacks-nodejs

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  README.md  buildpack.toml  clippy.toml
buildpacks/nodejs/: CHANGELOG.md  Cargo.toml  Makefile  README.md  buildpack.toml  go.mod  go.sum
buildpacks/nodejs-corepack/: CHANGELOG.md  Cargo.toml  README.md  build.sh  buildpack.toml
buildpacks/nodejs-corepack/src/: cfg.rs  cmd.rs  enable_corepack.rs  errors.rs  install_integrity_keys.rs  main.rs  prepare_corepack.rs
buildpacks/nodejs-corepack/src/layers/: manager.rs  mod.rs  shim.rs
buildpacks/nodejs-corepack/src/snapshots/: errors___corepack_enable_error.snap  errors___corepack_package_manager_missing_error.snap  errors___package_json_access_error.snap
buildpacks/nodejs-corepack/tests/: integration_test.rs
buildpacks/nodejs-corepack/tests/snapshots/: corepack_npm_10.snap  corepack_npm_8.snap  corepack_pnpm_7.snap  corepack_pnpm_8.snap  corepack_yarn_2.snap  corepack_yarn_3.snap
buildpacks/nodejs-engine/: CHANGELOG.md  Cargo.toml  README.md  build.sh  buildpack.toml  inventory.toml
buildpacks/nodejs-engine/fixtures/: package-patch-versions.json
buildpacks/nodejs-engine/lib/: build.sh  detect.sh
buildpacks/nodejs-engine/lib/utils/: toml.sh
buildpacks/nodejs-engine/shpec/: build_shpec.sh
buildpacks/nodejs-engine/src/: attach_runtime_metrics.rs  configure_available_parallelism.rs  configure_web_env.rs  errors.rs  install_node.rs  lib.rs  main.rs  util.rs
buildpacks/nodejs-engine/src/layers/: dist.rs  mod.rs  node_runtime_metrics.rs  web.rs  web_env.rs
buildpacks/nodejs-engine/src/snapshots/: errors___dist_layer_download_error.snap  errors___dist_layer_download_http_error.snap  errors___dist_layer_download_read_error.snap  errors___dist_layer_download_write_error.snap  errors___dist_layer_read_temp_file_error.snap  errors___inventory_parse_error.snap  errors___package_json_parse_error.snap  errors___unknown_version_error.snap
buildpacks/nodejs-engine/tests/: integration_test.rs  stack_change_test.rs
buildpacks/nodejs-function-invoker/: CHANGELOG.md  Cargo.toml  README.md  build.sh  buildpack.toml
buildpacks/nodejs-function-invoker/lib/: build.sh  detect.sh  failures.sh
buildpacks/nodejs-function-invoker/opt/: nodejs-runtime.sh  run.sh
buildpacks/nodejs-function-invoker/shpec/: build_shpec.sh  detect_shpec.sh
buildpacks/nodejs-function-invoker/src/: attach_startup_script.rs  function.rs  install_nodejs_function_runtime.rs  main.rs  util.rs
buildpacks/nodejs-function-invoker/tests/: integration_test.rs  stack_change_test.rs
buildpacks/nodejs-npm-engine/: CHANGELOG.md  Cargo.toml  README.md  buildpack.toml  inventory.toml
buildpacks/nodejs-npm-engine/src/: cmd.rs  errors.rs  install_npm.rs  lib.rs  main.rs  node.rs  npm.rs
buildpacks/nodejs-npm-engine/tests/: integration_test.rs
buildpacks/nodejs-npm-install/: CHANGELOG.md  Cargo.toml  README.md  buildpack.toml
buildpacks/nodejs-npm-install/src/: cmd.rs  configure_npm_cache_directory.rs  configure_npm_runtime_env.rs  errors.rs  lib.rs  main.rs  npm.rs
buildpacks/nodejs-npm-install/tests/: integration_test.rs
buildpacks/nodejs-pnpm-engine/: CHANGELOG.md  Cargo.toml  README.md  buildpack.toml
buildpacks/nodejs-pnpm-engine/src/: errors.rs  main.rs
buildpacks/nodejs-pnpm-engine/tests/: integration_test.rs
buildpacks/nodejs-pnpm-install/: CHANGELOG.md  Cargo.toml  README.md  build.sh  buildpack.toml  notes.md
buildpacks/nodejs-pnpm-install/src/: cmd.rs  configure_pnpm_store_directory.rs  configure_pnpm_virtual_store_directory.rs  errors.rs  main.rs  store.rs
buildpacks/nodejs-pnpm-install/tests/: integration_test.rs
buildpacks/nodejs-yarn/: CHANGELOG.md  Cargo.toml  README.md  build.sh  buildpack.toml  inventory.toml  notes.md
buildpacks/nodejs-yarn/src/: cfg.rs  cmd.rs  configure_yarn_cache.rs  errors.rs  install_yarn.rs  main.rs  yarn.rs
buildpacks/nodejs-yarn/tests/: integration_test.rs
buildpacks/nodejs/lib/: bootstrap.sh  build.sh  detect.sh
buildpacks/nodejs/profile/: WEB_CONCURRENCY.sh
buildpacks/nodejs/shpec/: build_shpec.sh  detect_shpec.sh
buildpacks/nodejs/src/: main.rs
buildpacks/nodejs/tests/: deprecation_integration_test.rs  npm_engine_integration_test.rs  npm_install_integration_test.rs  pnpm_engine_integration_test.rs  pnpm_install_integration_test.rs  yarn_integration_test.rs
common/nodejs-utils/: Cargo.toml
common/nodejs-utils/src/: application.rs  available_parallelism.rs  buildplan.rs  config.rs  distribution.rs  download_file.rs  error_handling.rs  errors.rs  http.rs  inv.rs  lib.rs  node.rs  nodebin_s3.rs  nodejs_org.rs  npmjs_org.rs  package_json.rs  package_manager.rs  s3.rs  telemetry.rs  vrs.rs
crates/nodejs-data/: Cargo.toml
crates/nodejs-data/src/: lib.rs
crates/nodejs-utils/: Cargo.toml  README.md
crates/nodejs-utils/src/: application.rs  buildplan.rs  config.rs  distribution.rs  download_file.rs  error_handling.rs  http.rs  lib.rs  nodejs_org.rs  npmjs_org.rs  package_json.rs  package_manager.rs
crates/release-schedule/: Cargo.toml
crates/release-schedule/src/: lib.rs
crates/test_support/: Cargo.toml
crates/test_support/src/: lib.rs  snapshot_filters.rs  test_arch.rs  test_builder.rs
crates/xtask/: Cargo.toml
crates/xtask-update-nodejs-inventory/: Cargo.toml
crates/xtask-update-nodejs-inventory/src/: main.rs  node_releases.rs  output.rs  trusted_release_keys.rs
crates/xtask-update-nodejs-release-schedule/: Cargo.toml
crates/xtask-update-nodejs-release-schedule/src/: main.rs
crates/xtask/src/: download_verify_node.rs  download_verify_npm_package.rs  generate_inventory.rs  main.rs  resolve_version.rs  verify_node.rs
libhkcnb-nodejs/: Cargo.toml  README.md
libhkcnb-nodejs/src/: inv.rs  lib.rs  nodebin_s3.rs  package_json.rs  versions.rs  vrs.rs
libnodejs/: Cargo.toml
libnodejs/src/: lib.rs  nodebin_s3.rs  package_json.rs  resolve_version.rs  version.rs
test_support/: Cargo.toml  README.md
test_support/src/: lib.rs  snapshot_filters.rs  test_builder.rs
(+705 files in other folders)
