[package]
name = "nodejs-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
available-parallelism.workspace = true
bon = "3"
bullet_stream = "0.11"
fun_run = "0.6"
futures = { version = "0.3", default-features = false, features = ["io-compat"] }
http = "1"
indoc = "2"
libcnb = { version = "=0.29.1", features = ["trace"] }
libherokubuildpack = { version = "=0.29.1", default-features = false, features = [
    "fs",
    "inventory",
    "inventory-sha2",
    "tar",
] }
node-semver = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-native-roots"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
serde = "1"
serde_json = "1"
sha2 = "0.10.9"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "macros"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat", "io"] }
toml = "0.9"
toml_edit = "0.23"

[dev-dependencies]
hyper = "1"
hyper-util = "0.1"
insta = "1"
libcnb-test = "=0.29.1"
regex = "1"
serde_json = "1"
test_support.workspace = true
wiremock = "0.6"

[workspace]
resolver = "2"
members = [
    "crates/available-parallelism",
    "crates/test_support",
    "crates/xtask-update-nodejs-inventory"
]

[workspace.package]
rust-version = "1.89"
edition = "2024"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"
# Allows the usage of cfg(coverage_nightly).
# cargo-llvm-cov enables that config when instrumenting our code, so we can enable
# the experimental coverage_attribute feature.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
available-parallelism = { path = "./crates/available-parallelism" }
test_support = { path = "./crates/test_support" }

[profile.release]
strip = true
