[package]
name = "nodejs-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
available-parallelism.workspace = true
bon = "3"
bullet_stream = "0.11"
const_format = "0.2"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
fun_run = "0.6"
hex = "0.4"
http = "1"
indoc = "2"
libcnb = { version = "=0.30.2", features = ["trace"] }
libherokubuildpack = { version = "=0.30.2", default-features = false, features = [
    "fs",
    "inventory",
    "inventory-sha2",
    "tar",
] }
node-semver = "2"
retry = { version = "2", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
serde = "1"
serde_json = "1"
sha2 = "0.10.9"
tar = { version = "0.4", default-features = false }
tempfile = "3"
toml = "0.9"
toml_edit = "0.23"
tracing = "0.1"
yaml-rust2 = "0.10"
walkdir = "2.5.0"

[dev-dependencies]
insta = "1"
libcnb-test = "=0.30.2"
regex = "1"
serde_json = "1"
test_support.workspace = true
tokio = { version = "1", default-features = false, features = ["rt"] }
wiremock = "0.6"

[workspace]
resolver = "2"
members = [
    "crates/available-parallelism",
    "crates/test_support",
    "crates/xtask-update-nodejs-inventory"
]

[workspace.package]
rust-version = "1.89"
edition = "2024"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"
# Allows the usage of cfg(coverage_nightly).
# cargo-llvm-cov enables that config when instrumenting our code, so we can enable
# the experimental coverage_attribute feature.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
available-parallelism = { path = "./crates/available-parallelism" }
test_support = { path = "./crates/test_support" }

[profile.release]
strip = true
