[package]
name = "nodejs-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
available-parallelism.workspace = true
bon = "3"
bullet_stream = "0.11"
const_format = "0.2"
digest-io = "0.1.0"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
fun_run = "0.6"
hex = "0.4"
http = "1"
indoc = "2"
libcnb = { version = "=0.30.4", features = ["trace"] }
libherokubuildpack = { version = "=0.30.4", default-features = false, features = [
    "fs",
    "inventory",
    "inventory-sha2",
    "tar",
] }
nodejs-data.workspace = true
retry = { version = "2", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = "1"
serde_json = "1"
sha2 = "0.11.0"
tar = { version = "0.4", default-features = false }
tempfile = "3"
toml = "1.0"
toml_edit = "0.25"
tracing = "0.1"
yaml-rust2 = "0.11"
walkdir = "2.5.0"

[dev-dependencies]
insta = "1"
libcnb-test = "=0.30.4"
regex = "1"
serde_json = "1"
test_support.workspace = true
tokio = { version = "1", default-features = false, features = ["rt"] }
wiremock = "0.6"

[workspace]
resolver = "2"
members = [
    "crates/available-parallelism",
    "crates/nodejs-data",
    "crates/test_support",
    "crates/xtask-sync-yarn-plugin-changelog",
    "crates/xtask-update-nodejs-inventory"
]

[workspace.package]
rust-version = "1.89"
edition = "2024"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
available-parallelism = { path = "./crates/available-parallelism" }
nodejs-data = { path = "./crates/nodejs-data" }
test_support = { path = "./crates/test_support" }

[patch.crates-io]
libcnb = { git = "https://github.com/heroku/libcnb.rs.git", branch = "ccasey/coverage-support" }
libcnb-test = { git = "https://github.com/heroku/libcnb.rs.git", branch = "ccasey/coverage-support" }
libcnb-data = { git = "https://github.com/heroku/libcnb.rs.git", branch = "ccasey/coverage-support" }
libcnb-common = { git = "https://github.com/heroku/libcnb.rs.git", branch = "ccasey/coverage-support" }
libcnb-package = { git = "https://github.com/heroku/libcnb.rs.git", branch = "ccasey/coverage-support" }
libcnb-proc-macros = { git = "https://github.com/heroku/libcnb.rs.git", branch = "ccasey/coverage-support" }
libherokubuildpack = { git = "https://github.com/heroku/libcnb.rs.git", branch = "ccasey/coverage-support" }

[profile.release]
strip = true
