[package]
name = "libhkcnb-nodejs"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.4.0"
url = "2.2"
serde = { version = "1.0.133", features = ['derive'] }
serde-xml-rs = "0.5.1"
serde_json = "1.0.59"
node-semver = "2.0"
anyhow = "1.0"
tempfile = "3.3.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
toml = "0.5"
