[package]
name = "libhkcnb-nodejs"
version = "0.1.0"
edition = "2021"
description = "Libs and bins for the Heroku Node.js Cloud Native Buildpack"
repository = "https://github.com/heroku/buildpacks-nodejs"
license = "MIT"
keywords = ["node", "nodejs", "buildpack", "cnb"]
categories = ["development-tools", "development-tools::build-utils"]

[dependencies]
ureq = "2.4.0"
url = "2.2"
serde = { version = "1.0.133", features = ['derive'] }
serde-xml-rs = "0.5.1"
serde_json = "1.0.59"
node-semver = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
toml = "0.5"
