[package]
name = "libnodejs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.133", features = ['derive'] }
serde-xml-rs = "0.5.1"
serde_json = "1.0.59"
node-semver = "2.0"
anyhow = "1.0"
tempfile = "3.3.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
