[package]
name = "test_support"
description = "Test support functions for integration tests"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = "=0.17.0"
libcnb-test = "=0.17.0"
serde_json = "1"
ureq = "2"
