[package]
name = "heroku-nodejs-corepack-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.26.0", features = ["trace"] }
libherokubuildpack = { version = "=0.26.0", default-features = false, features = ["log"] }
opentelemetry = "0.27"
serde = "1"
thiserror = "2"

[dev-dependencies]
libcnb-test = "=0.26.0"
test_support.workspace = true
ureq = "2"
