[package]
name = "heroku-nodejs-corepack-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.7"
fun_run = "0.5"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.26.0", features = ["trace"] }
opentelemetry = "0.27"
serde = "1"

[dev-dependencies]
libcnb-test = "=0.26.0"
test_support.workspace = true
ureq = "3"
