[package]
name = "heroku-nodejs-corepack-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.11"
fun_run = "0.6"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.29.0", features = ["trace"] }
opentelemetry = "0.30"
serde = "1"

[dev-dependencies]
insta = "1"
libcnb-test = "=0.29.0"
serde_json = "1"
test_support.workspace = true
