[package]
name = "heroku-nodejs-engine-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
heroku-nodejs-utils.workspace = true
libcnb = { version = "=0.24.0", features = ["trace"] }
libherokubuildpack = { version = "=0.24.0", default-features = false, features = ["download", "fs", "inventory", "log", "tar"] }
serde = "1"
sha2 = "0.10.8"
tempfile = "3"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
libcnb-test = "=0.24.0"
serde_json = "1"
test_support.workspace = true
ureq = "2"
