[package]
name = "heroku-nodejs-engine-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
heroku-nodejs-utils.workspace = true
libcnb = { version = "=0.26.0", features = ["trace"] }
libherokubuildpack = { version = "=0.26.0", default-features = false, features = ["download", "fs", "inventory", "log", "tar"] }
serde = "1"
sha2 = "0.10.8"
tempfile = "3"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
indoc = "2"
libcnb-test = "=0.26.0"
regex = "1"
serde_json = "1"
test_support.workspace = true
ureq = "2"
