[package]
name = "heroku-nodejs-engine-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.8"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.28.1", features = ["trace"] }
libherokubuildpack = { version = "=0.28.1", default-features = false, features = [
    "download",
    "fs",
    "inventory",
    "tar",
] }
serde = "1"
sha2 = "0.10.9"
tempfile = "3"
toml = "0.8"

[dev-dependencies]
insta = "1"
libcnb-test = "=0.28.1"
regex = "1"
serde_json = "1"
test_support.workspace = true
ureq = "3"
