[package]
name = "heroku-nodejs-function-invoker-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
heroku-nodejs-utils.workspace = true
libcnb = "=0.19.0"
libherokubuildpack = "=0.17.0"
serde = "1"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
base64 = "0.21"
hex = "0.4"
libcnb-test = "=0.19.0"
rand = "0.8"
serde_json = "1"
tempfile = "3"
test_support.workspace = true
ureq = "2"
