[package]
name = "heroku-nodejs-function-invoker-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
heroku-nodejs-utils.workspace = true
libcnb = "=0.24.0"
libherokubuildpack = { version = "=0.24.0", default-features = false, features = ["error", "log", "toml"] }
serde = "1"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
base64 = "0.22"
hex = "0.4"
libcnb-test = "=0.24.0"
rand = "0.8"
serde_json = "1"
tempfile = "3"
test_support.workspace = true
ureq = "2"
