[package]
name = "heroku-nodejs-function-invoker-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.7"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = "=0.27.0"
libherokubuildpack = { version = "=0.27.0", default-features = false, features = ["toml"] }
serde = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
base64 = "0.22"
hex = "0.4"
libcnb-test = "=0.27.0"
rand = "0.9"
serde_json = "1"
tempfile = "3"
test_support.workspace = true
ureq = "2"
