[package]
name = "heroku-npm-engine-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
commons = { git = "https://github.com/heroku/buildpacks-ruby", branch = "main" }
fun_run = "0.1"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.22.0", features = ["trace"] }
libherokubuildpack = { version = "=0.22.0", default-features = false, features = ["download", "tar"] }
serde = "1"
toml = "0.8"

[dev-dependencies]
libcnb-test = "=0.21.0"
serde_json = "1"
test_support.workspace = true
