[package]
name = "heroku-npm-install-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.4"
fun_run = "0.4"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.26.0", features = ["trace"] }
serde = "1"

[dev-dependencies]
libcnb-test = "=0.26.0"
serde_json = "1"
test_support.workspace = true
