[package]
name = "heroku-pnpm-engine-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.7"
indoc = "2"
libcnb = { version = "=0.28.0", features = ["trace"] }

[dev-dependencies]
libcnb-test = "=0.28.0"
test_support.workspace = true
