[package]
name = "heroku-pnpm-engine-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.8"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.29.0", features = ["trace"] }

[dev-dependencies]
insta = "1"
libcnb-test = "=0.29.0"
test_support.workspace = true
