[package]
name = "heroku-nodejs-pnpm-install-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.7"
fun_run = "0.5"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.28.0", features = ["trace"] }
serde = "1"
toml = "0.8"

[dev-dependencies]
libcnb-test = "=0.28.0"
test_support.workspace = true
ureq = "2"
