[package]
name = "heroku-nodejs-pnpm-install-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.8"
fun_run = "0.6"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.28.1", features = ["trace"] }
serde = "1"
toml = "0.8"

[dev-dependencies]
insta = "1"
libcnb-test = "=0.28.1"
serde_json = "1"
test_support.workspace = true
