[package]
name = "heroku-nodejs-yarn-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.8"
fun_run = "0.5"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.28.1", features = ["trace"] }
libherokubuildpack = { version = "=0.28.1", default-features = false, features = [
    "download",
    "fs",
    "tar",
] }
serde = "1"
tempfile = "3"
toml = "0.8"

[dev-dependencies]
insta = "1"
libcnb-test = "=0.28.1"
test_support.workspace = true
serde_json = "1"
ureq = "3"
