[package]
name = "heroku-nodejs-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = "0.8"
fun_run = "0.6"
heroku-nodejs-utils.workspace = true
indoc = "2"
libcnb = { version = "=0.28.1", features = ["trace"] }
libherokubuildpack = { version = "=0.28.1", default-features = false, features = ["download", "fs", "tar", "inventory", "inventory-sha2"] }
serde = { version = "1", features = ['derive'] }
sha2 = "0.10.8"
tempfile = "3"
toml = "0.8"

[dev-dependencies]
insta = "1"
libcnb = "=0.28.1"
libcnb-test = "=0.28.1"
regex = "1"
reqwest = "0.12"
reqwest-middleware = "0.4"
serde_json = "1"
test_support.workspace = true
tokio = "1"
