[package]
name = "heroku-nodejs-utils"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
bon = "3"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
bullet_stream = "0.7"
indoc = "2"
keep_a_changelog_file = "0.1.0"
libcnb-data = "=0.28.1"
libherokubuildpack = { version = "=0.28.1", default-features = false, features = [
    "inventory",
    "inventory-sha2",
] }
node-semver = "2"
regex = "1"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
serde-xml-rs = "0.6"
sha2 = "0.10.8"
thiserror = "2"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
url = "2"

[dev-dependencies]
tempfile = "3"
