[package]
name = "heroku-nodejs-utils"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1.88"
bon = "3"
clap = { version = "4", default-features = false, features = ["std"] }
bullet_stream = "0.11"
futures = { version = "0.3", default-features = false, features = ["io-compat"] }
hex = "0.4"
http = "1"
indoc = "2"
keep_a_changelog_file = "0.1.0"
libcnb = "=0.29.1"
libcnb-data = "=0.29.1"
libherokubuildpack = { version = "=0.29.1", default-features = false, features = [
    "inventory",
    "inventory-sha2",
] }
node-semver = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-native-roots"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
sha2 = "0.10.9"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "macros"] }
tokio-util = { version = "0.7", default-features = false, features = ["compat", "io"] }
toml = "0.9"
ureq = { version = "3", features = ["json"] }
toml_edit = "0.23.2"

[dev-dependencies]
hyper = "1"
hyper-util = "0.1"
http = "1"
insta = "1"
tempfile = "3"
test_support.workspace = true
wiremock = "0.6"
