[package]
name = "nodejs-data"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fun_run = "0.6"
libherokubuildpack = { version = "=0.30.4", default-features = false, features = [
    "inventory",
    "inventory-sha2",
] }
node-semver = "2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11.0"
