[package]
name = "test_support"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bon = "3"
indoc = "2"
insta = { version = "1", features = ["filters"] }
libcnb = { git = "https://github.com/heroku/libcnb.rs", branch = "add-release-schedule-module" }
libcnb-test = { git = "https://github.com/heroku/libcnb.rs", branch = "add-release-schedule-module" }
serde_json = "1"
tempfile = "3"
ureq = "3"
