[package]
name = "test_support"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bon = "3"
indoc = "2"
insta = { version = "1", features = ["filters"] }
libcnb = { version = "=0.30.3", default-features = false }
libcnb-test = "=0.30.3"
serde_json = "1"
tempfile = "3"
ureq = "3"
