[package]
name = "xtask-update-nodejs-inventory"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
keep_a_changelog_file = "0.1.0"
libherokubuildpack = { version = "=0.30.2", default-features = false, features = [
    "inventory",
    "inventory-sha2",
] }
node-semver = "2"
regex = "1"
reqwest = "0.12"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
sequoia-net = "0.30"
sha2 = "0.10.9"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
