[package]
name = "xtask"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["cargo"] }
regex = "1"
reqwest = "0.12"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
sequoia-openpgp = "2"
sha256 = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }