[package]
name = "xtask"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
node-semver = "2"
regex = "1"
reqwest = "0.12"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
sequoia-openpgp = "2"
sequoia-net = "0.30"
sha256 = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
